Fixed some css spacing issues & replaces bower components

--- a/app/styles/Main.css
+++ b/app/styles/Main.css
@@ -311,8 +311,8 @@
 /* Positioning for the calc and clear btns  */
 .allCalcBtns {
   position: relative;
-  left: 99px;
-  top: 2px;
+  left: 80px;
+  top: 5px;
 }
 
 
@@ -456,9 +456,9 @@
 }
 
 /* Positioning of Distance input */
-.move2 {
+.moveDist {
   position: relative;
-  left: 26px;
+  left: 25px;
   
 }
 
@@ -529,11 +529,9 @@
 .justGenBtns {
   position: relative;
   visibility: visible;
+  right: 2px;
 }
 
-.justGenBtns > span {
-  
-}
 
 /* Text for the female label b/c it's longer than male */
 .femaleLabel {
@@ -628,7 +626,7 @@
   background-color: rgba(0, 0, 0, 0);
   z-index: 1;
   margin-right: 5px;
-  left: 54px;
+  left: 52px;
   padding: 13px 0px 12px 0px;
   border-radius: 5px;
   border: 1px solid #CC0000;
@@ -641,7 +639,7 @@
   background-color: rgba(0, 0, 0, 0);
   z-index: 1;
   margin-right: 5px;
-  left: 54px;
+  left: 52px;
   padding: 13px 0px 12px 0px;
   border-radius: 5px;
   border: 1px solid #CC0000;
@@ -696,10 +694,10 @@
 /* Visible version of the gender err div shown by ng-class */
 .genCheckErr {
   position: relative;
-  left: 35px;
+  left: 32px;
   border: 1px solid #CC0000;
   border-radius: 5px;
-  padding: 2px 7px 14px 0px;
+  padding: 2px 5px 13px 3px;
   visibility: visible;
 }
 
@@ -707,17 +705,17 @@
   Protects against margin/padding problems */
 .genCheckErrInvis {
   position: relative;
-  left: 35px;
+  left: 32px;
   border: 1px solid #CC0000;
   border-radius: 5px;
-  padding: 2px 10px 14px 0px;
+  padding: 2px 5px 13px 3px;
   visibility: collapse;
 }
 
 /* Error div that fades in when any forms are missing data */
 .errWarning {
   position: relative;
-  left: 85px;
+  left: 65px;
   width: 75%;
   height: 60px;
   background: #ffa0a0;
@@ -877,10 +875,10 @@ select:-moz-focusring {
       font-size: 13px;
     }
     .genCheckErr {
-      padding: 6px 7px 9px 0px;
+      padding: 6px 3px 8px 3px;
     }
     .genCheckErrInvis {
-      padding: 6px 10px 9px 0px;
+      padding: 6px 3px 8px 3px;
     }
 
     .femaleLabel {
@@ -892,7 +890,7 @@ select:-moz-focusring {
       left: 63px;
     }
 
-    .move2 {
+    .moveDist {
       left: 25px;
     }
 }
